[package]
name = "compilation-exp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
